# init

./: .env.example  .envrc  .gitignore  .gitsecrets  ALL_FIXES_SUMMARY.md  CODE_QUALITY_ISSUES_STATUS.md  Cargo.toml  DOCUMENTATION_COMMIT_MESSAGE.txt  DOCUMENTATION_COMMIT_MESSAGE_SIMPLE.txt  DOCUMENTATION_INDEX.md  FINAL_COMMIT_MESSAGE.txt  FINAL_SECURITY_AND_QUALITY_COMMIT.txt  FINAL_TEST_COMMIT_MESSAGE.txt  FRONTEND_API_GUIDE.md  GATEWAY_GRPC_COMMIT_MESSAGE.txt  GATEWAY_IMPLEMENTATION_SUMMARY.md  GRPC_API_TESTING_GUIDE.md  GRPC_REFLECTION_STATUS.md  MULTI_TENANT_PHASE2_COMMIT_MESSAGE.txt  MULTI_TENANT_PHASE2_SUMMARY.md  OAUTH2_COMMIT_MESSAGE.txt  OAUTH2_PROVIDER_COMMIT_MESSAGE.txt  OBSERVABILITY_COMMIT_MESSAGE.txt  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  PASSWORD_RESET_COMMIT_MESSAGE.txt  PASSWORD_RESET_COMMIT_MESSAGE_SIMPLE.txt  PASSWORD_RESET_COMPLETION.md  PASSWORD_RESET_SUMMARY.md  PHASE2_COMPLETION_CHECKLIST.md  PROJECT_FIXES_COMMIT_MESSAGE.txt  PROJECT_FIXES_COMMIT_MESSAGE_SIMPLE.txt  README.md  REPOSITORY_TEST_SUMMARY.md  SECURITY.md  SECURITY_FIXES_COMPLETE.md  SECURITY_FIXES_PHASE2_COMPLETE.md  SECURITY_FIX_COMMIT_MESSAGE.txt  SECURITY_FIX_PHASE2_COMMIT_MESSAGE.txt  SECURITY_ISSUES_STATUS_REPORT.md  SESSION_FINAL_SUMMARY.md  (+18 more)
bootstrap/: Cargo.toml
bootstrap/src/: health.rs  infrastructure.rs  interceptor.rs  lib.rs  metrics.rs  reflection.rs  retry.rs  runtime.rs  shutdown.rs  starter.rs
crates/adapters/clickhouse/: Cargo.toml
crates/adapters/email/: Cargo.toml
crates/adapters/kafka/: Cargo.toml
crates/adapters/postgres/: Cargo.toml
crates/adapters/redis/: Cargo.toml
crates/adapters/vault/: CHECKLIST.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md
crates/auth-core/: Cargo.toml
crates/auth-core/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: health.rs  lib.rs  retry.rs  types.rs  utils.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  tests.rs
crates/config/tests/: vault_integration.rs
crates/event-core/: Cargo.toml
crates/event-core/src/: domain_event.rs  event_handler.rs  event_store.rs  lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
gateway/: Cargo.toml  Dockerfile  build.rs
gateway/src/: audit.rs  auth.rs  config.rs  main.rs  middleware.rs  rate_limit.rs  routing.rs  security_headers.rs  ws.rs
gateway/src/grpc/: cuba.iam.auth.rs  cuba.iam.user.rs  mod.rs
gateway/src/rate_limit/: classifier.rs  config.rs  limiter.rs  middleware.rs  mod.rs  tier.rs  types.rs
services/iam-access/: CACHE_ARCHITECTURE.md  CACHE_CHECKLIST.md  CACHE_IMPROVEMENT.md  CACHE_IMPROVEMENT_SUMMARY.md  CACHE_QUICKSTART.md  CACHE_README.md  COMPLETE_SUMMARY.md  Cargo.toml  DATABASE_POOL_CONFIG.md  Dockerfile  INDEX.md  OPTIMIZATION_COMPLETE.md  POOL_FAQ.md  POOL_OPTIMIZATION_SUMMARY.md  POOL_SETUP_GUIDE.md  RBAC_OPTIMIZATION_SUMMARY.md  README.md  README_POOL.md  build.rs  docker-compose.pool-test.yml
services/iam-access/config/: default.toml  development.toml  production.toml
services/iam-access/migrations/: 20260128200000_create_permissions_table.sql  20260128200100_create_roles_table.sql  20260128200200_create_role_permissions_table.sql  20260128200300_create_user_roles_table.sql  20260128200400_create_policies_table.sql  20260128213000_add_role_search_indexes.sql  20260128230000_add_composite_indexes.sql  20260128231000_create_outbox_table.sql
services/iam-access/monitoring/: prometheus.yml
services/iam-access/scripts/: health_check_pool.sh  init-primary.sql  install.sh  monitor_connections.sql  quick_deploy.sh  setup-replica.sh  stress_test_pool.sh
services/iam-access/src/: config.rs  error.rs  lib.rs  main.rs
services/iam-identity/: .env.example  2FA_COMPLETION_REPORT.md  2FA_DEPLOYMENT_SUCCESS.md  2FA_IMPLEMENTATION_STATUS.md  2FA_TESTING_GUIDE.md  BRUTE_FORCE_PROTECTION.md  Cargo.toml  Dockerfile  MULTI_TENANT_IMPLEMENTATION_SUMMARY.md  OAUTH2_SERVER_SUMMARY.md  OBSERVABILITY_GUIDE.md  PASSWORD_RESET_PROGRESS.md  REFACTORING_REPORT.md  TASK_1_COMPLETION.md  TASK_1_FINAL_CHECK.md  TENANT_ISOLATION_GUIDE.md  TEST_COVERAGE_REPORT.md  USER_LIFECYCLE_SUMMARY.md  WEBAUTHN_IMPLEMENTATION.md  build.rs  run_tests.sh  test_2fa.sh  test_webauthn.sh
services/iam-identity/benches/: auth_benchmark.rs
services/iam-identity/config/: default.toml  development.toml  production.toml
services/iam-identity/migrations/: 20250101000001_create_users_table.sql  20250101000002_create_sessions_table.sql  20260126011629_add_2fa_support.sql  20260126021500_create_password_reset_tokens_table.sql  20260126030000_create_webauthn_credentials_table.sql  20260126040000_add_row_level_security.sql  20260126050000_add_account_lock_fields.sql  20260126052917_create_tenants.sql  20260126052918_add_tenant_id_to_tables.sql  20260126060000_create_login_logs_table.sql  20260126070000_create_email_verifications_table.sql  20260126070001_create_phone_verifications_table.sql  20260126080000_create_oauth_clients_table.sql  20260126080001_create_authorization_codes_table.sql  20260126080002_create_access_tokens_table.sql  20260126080003_create_refresh_tokens_table.sql  20260126085000_add_tenant_id_to_new_tables.sql  20260126090000_enable_rls_with_tenant.sql  20260126100000_fix_missing_columns.sql  20260127000001_fix_oauth_schema_issues.sql  20260128000000_update_webauthn_credentials_to_passkey_data.sql  20260128000001_create_domain_events_table.sql  20260128100000_add_composite_indexes.sql  20260128110000_fix_session_indexes_and_event_store.sql  20260128120000_create_outbox_table.sql  README.md
services/iam-identity/src/: error.rs  lib.rs  main.rs
services/iam-identity/tests/: ddos_test.rs  domain_events_test.rs  event_publisher_test.rs  login_log_repository_test.rs  mfa_repositories_test.rs  oauth_client_repository_test.rs  oauth_client_test.rs  (+8 more)
services/mdm-material/: API_IMPLEMENTATION_STATUS.md  COMPLETION_STATUS.md  Cargo.toml  Dockerfile  INFRASTRUCTURE_COMPLETION_CHECK.md  MDM_MATERIAL_DEVELOPMENT_PLAN.md  VIEW_DATA_CONVERSION_PROGRESS.md  build.rs
services/sys-core/: Cargo.toml  Dockerfile  build.rs
(+1040 files in other folders)
