[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/errors",
    "crates/config",
    "crates/telemetry",
    "crates/auth-core",
    "crates/ports",
    "crates/domain-core",
    "crates/cqrs-core",
    "crates/event-core",
    "crates/adapters/postgres",
    "crates/adapters/redis",
    "crates/adapters/clickhouse",
    "crates/adapters/kafka",
    "crates/adapters/email",
    "bootstrap",
    "gateway",
    "services/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["eqycc <a@eqy.cc>"]
license = "Apache-2.0"
repository = "https://github.com/ceqy/init"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Web framework
axum = { version = "0.8" }

# gRPC
tonic = { version = "0.13" }
tonic-build = { version = "0.13" }
tonic-reflection = { version = "0.13" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }
http = { version = "1.2" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "cluster", "cluster-async"] }

# Kafka
rdkafka = { version = "0.37", features = ["tokio"] }

# ClickHouse
clickhouse = { version = "0.13" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = { version = "0.15" }

# Error handling
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }

# Tracingjx
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16" }

# Auth
jsonwebtoken = { version = "9.3" }
argon2 = { version = "0.5" }
sha2 = { version = "0.10" }

# 2FA
totp-rs = { version = "5.5" }
data-encoding = { version = "2.5" }
rand = { version = "0.8" }
urlencoding = { version = "2.1" }

# WebAuthn
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = { version = "0.5" }
base64 = { version = "0.22" }
serde_cbor = { version = "0.11" }

# Secrets
secrecy = { version = "0.8", features = ["serde"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
tera = { version = "1.19" }
email_address = { version = "0.2" }

# Utilities
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = { version = "0.1" }
derive_more = { version = "2.0", features = ["display", "from", "error"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"] }

# Testing
tokio-test = { version = "0.4" }
mockall = { version = "0.13" }

# Additional utilities
hex = { version = "0.4" }
futures = { version = "0.3" }
url = { version = "2.5.8" }

# Internal crates
common = { path = "crates/common" }
errors = { path = "crates/errors" }
config = { path = "crates/config" }
telemetry = { path = "crates/telemetry" }
auth-core = { path = "crates/auth-core" }
ports = { path = "crates/ports" }
domain-core = { path = "crates/domain-core" }
cqrs-core = { path = "crates/cqrs-core" }
event-core = { path = "crates/event-core" }
adapter-postgres = { path = "crates/adapters/postgres" }
adapter-redis = { path = "crates/adapters/redis" }
adapter-clickhouse = { path = "crates/adapters/clickhouse" }
adapter-kafka = { path = "crates/adapters/kafka" }
adapter-email = { path = "crates/adapters/email" }
bootstrap = { path = "bootstrap" }

# ============================================
# 编译优化配置
# ============================================

[profile.dev]
opt-level = 0
debug = 1  # 减少调试信息，加快编译

[profile.dev.package."*"]
opt-level = 2  # 依赖使用优化编译

[profile.release]
lto = "thin"
codegen-units = 16
