[package]
name = "cuba-bootstrap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 内部 crates
cuba-config = { workspace = true }
cuba-errors = { workspace = true }
cuba-telemetry = { workspace = true }
cuba-auth-core = { workspace = true }
cuba-ports = { workspace = true }
cuba-adapter-postgres = { workspace = true }
cuba-adapter-redis = { workspace = true }
cuba-adapter-kafka = { workspace = true }
cuba-adapter-clickhouse = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-reflection = { version = "0.13" }
http = { workspace = true }

# HTTP (健康检查端点)
axum = { workspace = true }

# 异步运行时
tokio = { workspace = true }

# 日志
tracing = { workspace = true }

# 其他
tower = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
clickhouse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Secrets
secrecy = { version = "0.8", features = ["serde"] }
