[package]
name = "bootstrap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 内部 crates
config = { workspace = true }
errors = { workspace = true }
telemetry = { workspace = true }
auth-core = { workspace = true }
ports = { workspace = true }
adapter-postgres = { workspace = true }
adapter-redis = { workspace = true }
adapter-kafka = { workspace = true }
adapter-clickhouse = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-reflection = { workspace = true }
http = { workspace = true }

# HTTP (健康检查端点)
axum = { workspace = true }

# 异步运行时
tokio = { workspace = true }

# 日志
tracing = { workspace = true }

# 其他
tower = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
clickhouse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Secrets
secrecy = { version = "0.8", features = ["serde"] }
