[package]
name = "cuba-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cuba-config = { workspace = true }
cuba-errors = { workspace = true }
cuba-telemetry = { workspace = true }
cuba-auth-core = { workspace = true }
cuba-bootstrap = { workspace = true }
cuba-common = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
redis = { workspace = true, features = ["tokio-comp", "aio"] }
secrecy.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
