[package]
name = "cuba-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cuba-config = { workspace = true }
cuba-errors = { workspace = true }
cuba-telemetry = { workspace = true }
cuba-auth-core = { workspace = true }
cuba-bootstrap = { workspace = true }
cuba-common = { workspace = true }
cuba-adapter-redis = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["limit"] }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
metrics = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
redis = { workspace = true, features = ["tokio-comp", "aio", "connection-manager", "script"] }
secrecy.workspace = true
futures.workspace = true
url.workspace = true
dotenvy.workspace = true
once_cell = "1.19"
regex = "1.10"

[build-dependencies]
tonic-build = { workspace = true }
