[package]
name = "auth-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
errors = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
