[package]
name = "iam-access"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
errors = { workspace = true }
config = { workspace = true }
telemetry = { workspace = true }
ports = { workspace = true }
domain-core = { workspace = true }
cqrs-core = { workspace = true }
event-core = { workspace = true }
adapter-postgres = { workspace = true }
adapter-redis = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
bootstrap = { workspace = true }

tonic = { workspace = true }
tonic-reflection = "0.13"
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
secrecy = { workspace = true }

# 缓存改进依赖
moka = { version = "0.12", features = ["future"] }
rand = "0.8"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
