[package]
name = "iam-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cuba-common = { workspace = true }
cuba-errors = { workspace = true }
cuba-config = { workspace = true }
cuba-telemetry = { workspace = true }
cuba-auth-core = { workspace = true }
cuba-ports = { workspace = true }
cuba-domain-core = { workspace = true }
cuba-cqrs-core = { workspace = true }
cuba-event-core = { workspace = true }
cuba-adapter-postgres = { workspace = true }
cuba-adapter-redis = { workspace = true }
cuba-bootstrap = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
