[package]
name = "iam-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cuba-common = { workspace = true }
cuba-errors = { workspace = true }
cuba-config = { workspace = true }
cuba-telemetry = { workspace = true }
cuba-auth-core = { workspace = true }
cuba-ports = { workspace = true }
cuba-domain-core = { workspace = true }
cuba-cqrs-core = { workspace = true }
cuba-event-core = { workspace = true }
cuba-adapter-postgres = { workspace = true }
cuba-adapter-redis = { workspace = true }
cuba-adapter-email = { workspace = true }
cuba-bootstrap = { workspace = true }

tonic = { workspace = true }
tonic-reflection = "0.13"
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }

# 2FA 相关依赖
totp-rs = { workspace = true }
data-encoding = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }

# WebAuthn 相关依赖
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
base64 = { workspace = true }
serde_cbor = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
criterion = "0.5"
secrecy.workspace = true
url = "2.5.8"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "auth_benchmark"
harness = false
