[package]
name = "iam-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
errors = { workspace = true }
config = { workspace = true }
telemetry = { workspace = true }
auth-core = { workspace = true }
ports = { workspace = true }
domain-core = { workspace = true }
cqrs-core = { workspace = true }
event-core = { workspace = true }
adapter-postgres = { workspace = true }
adapter-redis = { workspace = true }
adapter-email = { workspace = true }
bootstrap = { workspace = true }

tonic = { workspace = true }
tonic-reflection = "0.13"
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }

# 2FA 相关依赖
totp-rs = { workspace = true }
data-encoding = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }

# WebAuthn 相关依赖
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
base64 = { workspace = true }
serde_cbor = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "aio"] }
secrecy.workspace = true
email_address.workspace = true

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
criterion = "0.5"
secrecy.workspace = true
url = "2.5.8"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
redis = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
futures = { workspace = true }

[[bench]]
name = "auth_benchmark"
harness = false
