[package]
name = "mdm-material"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
errors = { workspace = true }
config = { workspace = true }
telemetry = { workspace = true }
ports = { workspace = true }
domain-core = { workspace = true }
cqrs-core = { workspace = true }
event-core = { workspace = true }
adapter-postgres = { workspace = true }
adapter-redis = { workspace = true }
bootstrap = { workspace = true }

tonic = { workspace = true }
tonic-reflection = "0.13"
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
secrecy = { workspace = true }
rust_decimal = { version = "1.33", features = ["db-postgres"] }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
