[package]
name = "cuba-adapter-email"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 内部依赖
cuba-errors = { workspace = true }
cuba-config = { workspace = true }

# 邮件发送
lettre = { workspace = true }

# 邮件模板
tera = { workspace = true }

# 异步运行时
tokio = { workspace = true }
async-trait = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 日志
tracing = { workspace = true }

# 错误处理
thiserror = { workspace = true }
