[package]
name = "cuba-adapter-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cuba-common = { workspace = true }
cuba-errors = { workspace = true }
cuba-ports = { workspace = true }
cuba-event-core = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
